# newsletter

./: Cargo.toml  Dockerfile  docker-compose.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
migrations/: 20230320152107_create_subscriptions_table.sql  20230320152154_create_subscriptions_tokens_table.sql  20230326194519_seed_user.sql  20230326205628_create_idempotency_table.sql
src/: application.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: healthcheck.rs  home.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/api/: admin_dashboard.rs  change_password.rs  healthcheck.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
