[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
anyhow = "1.0.69"
config = "0.13.3"
serde = { version = "1.0.156", features = ["derive"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
