[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
anyhow = "1.0.69"
build_html = "2.3.0"
config = "0.13.3"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
validator = "0.16"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
wiremock = "0.5"
