[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
actix-web-lab = "0.19.1"
anyhow = "1.0.69"
argon2 = { version = "0.5", features = ["std"] }
config = "0.13.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
rand = { version = "0.8.5", features=["std_rng"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "cookies"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
validator = "0.16"

[dev-dependencies]
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.17.1"
wiremock = "0.5"
